Update 3.Attachment Analysis .md

--- a/3.Attachment Analysis .md
+++ b/3.Attachment Analysis .md
@@ -1,1 +1,50 @@
+# Detection-Lab - Attachment Analysis
 
+## Objective
+
+Attachment Analysis: Investigate a real-world credential harvester delivered via an unusual method, where instead of using a URL in the email, a specific file type is attached.
+
+### Skills Learned
+
+- Analysis of attachments to identify potential threats.
+- Identification and retrieval of indicators from a credential harvester delivered via unconventional methods.
+- Understanding the importance of analyzing various delivery methods used by threat actors.
+- Application of security principles in assessing potential risks posed by attachments in emails.
+
+### Tools Used
+
+- Email clients for viewing and analyzing attachments.
+- Text editors or specialized analysis tools for examining file contents.
+- Malware analysis tools for identifying and extracting indicators of compromise.
+- Security software or services for validating suspicious attachments.
+
+## Steps
+
+![edc718e32d68c04c7c1e03452bd65ea587b21d1ee058ac0f5b11ddc659e022daf100a2b17444b7ae62a4a4d0173a](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/fe93b4e8-0845-437f-9024-09e84d7e3668)
+- Looking in the folder for Lab 3 on the Desktop, I found the file. Right-clicking it, I went to Properties and copied the filename. Additionally, I noted the file extension, which I found to be ‘.html’ on this panel.
+
+![ebaa234416efbc896ef220a143721bb1854ab479cfe3688f99597721f7713ca68b7b8043c2aeff1747fe5d56b279](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/6f60573a-e397-45a0-a97e-32f8bd513040)
+- I held shift and right-clicked in the folder that contained the file to select ‘Open PowerShell Window Here’. Then I used the command Get-FileHash MICRO (and pressed the Tab key to auto-complete the filename).
+
+![8aba5e2905ca4ad086b9f1593d768bef90f86da2b0350528b51b9909855c6dfc1dd83a671a64bebdd94910a798d3](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/a0388104-8af5-4dba-8493-6a638d9c98c4)
+- I got this value by right-clicking the file, clicking Properties, then looking at the Size property.
+
+![a16eb29db784da99024568f50a7b59e3eb5c2dc22877a7e134808951705d191ceba2e6f9ce55f6cf00d5d623fe15](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/d6d94dc4-8ce8-4109-b16c-34c2a42b54d2)
+- Based on the Website Title property and the design, this web page is imitating Microsoft's Outlook / Office365 login portal (even though the logo image isn't loading, because the lab has no internet connection).
+
+![101c907e70eee18d6e0bc2d6a5502702db0bd36db3b63ca6c8a699b7d20e66fd7bb0f9045eda61fc9ee7e2f16a12](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/3d78abb1-8d0b-4d70-8366-f5259f85f3c9)
+-I could see that the email is already set in the web page as contact@securityblue.team.
+
+![d3fc53e98f17fa780c059713beb26987f0ae003b2adf083c310fb979adbc92386afee777024a00bacf88379e6653](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/4acee737-ba3b-4ae3-9d15-c3207073beb2)
+- Putting the source code in CyberChef with the URL Decode operation, I could perceive the contents of the web page clearly.
+
+![6aa78c1f8ee39f50fb0635ff44e6d7ef1542e2c44f6a79c27cb2d88d197376f5814a698aedffbdd1542e7d394049](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/7b59e557-d468-4d8e-bbb2-ce2f682e4804)
+- Using CTRL+F I could search for ‘logo’ and find the URL and filename needed to answer the question related.
+
+![a6c9593d2a579aff29564e66a7eea7edd12a7216687a75658e048207e017ccfc5848fdfcfb136c09934a8e6b4f9f](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/55647b53-3e50-44d3-9666-ea8fdfbeca34)
+- Opening Developer Tools and going to the Network tab, I could see any network activity on a website. Submitting the password ‘test’ resulted in the following URL being visited on a malicious domain, which is how the attacker received the credentials. Copying this value gave me the answer for the question. I noticed how the email and password were in this URL.
+
+
+- *Ref 1: - Mozilla Thunderbird email client for viewing emails.*
+- *Ref 2: - File Editors.*
+- *Ref 3: - Power Shell.*
