Update 2.Manual Artifact Extraction.md

--- a/2.Manual Artifact Extraction.md
+++ b/2.Manual Artifact Extraction.md
@@ -76,7 +76,7 @@ Retrieve key indicators and artifacts from phishing emails using manual methods 
 - In Thunderbird, I could right-click the attachment and click Save-As to save it to the Desktop. After that, I opened a PowerShell window and used the Get-FileHash cmdlet to retrieve the MD5 and SHA256 hashes. Since SHA256 is the default hashing algorithm, I didn't need to specify it, but I had to do so for MD5.
 
 
-- *Ref 1: - Mozilla Thunderbird email client for viewing emails.*
-- *Ref 2: - Sublime Text 2 text editor for direct inspection of .eml files.*
-- *Ref 3: - PowerShell for additional tasks.*
+- *Ref 1: - Mozilla Thunderbird email client for viewing and analyzing emails.*
+- *Ref 2: - Sublime Text 2 text editor for examining .eml files.*
+- *Ref 3: - PowerShell for supplementary tasks.*
 - *Ref 4: - Online services for WHOis lookup (whois.domaintools.com)*
