Update 3.Attachment Analysis .md

--- a/3.Attachment Analysis .md
+++ b/3.Attachment Analysis .md
@@ -45,6 +45,6 @@ Attachment Analysis: Investigate a real-world credential harvester delivered via
 - Opening Developer Tools and going to the Network tab, I could see any network activity on a website. Submitting the password ‘test’ resulted in the following URL being visited on a malicious domain, which is how the attacker received the credentials. Copying this value gave me the answer for the question. I noticed how the email and password were in this URL.
 
 
-- *Ref 1: - Mozilla Thunderbird email client for viewing emails.*
-- *Ref 2: - File Editors.*
-- *Ref 3: - Power Shell.*
+- *Ref 1: - Email clients for viewing and analyzing attachments.*
+- *Ref 2: - Text editors or specialized analysis tools for examining file contents.*
+- *Ref 3: - Malware analysis tools for identifying and extracting indicators of compromise.*
