--- a/5.Threat Intel.md
+++ b/5.Threat Intel.md
@@ -1,1 +1,20 @@
+# Incident Responder Lab - Threat Intel
 
+## Objective
+
+Utilize MISP, a Threat Intelligence Platform (TIP), to conduct analysis and research on threat actors and cyber attacks. Complete four tasks provided by the manager, each with three associated questions, to gather relevant information and find answers.
+
+
+### Skills Learned
+
+- Proficiency in using Threat Intelligence Platforms (TIPs) like MISP for analysis and research.
+- Understanding of threat actor profiling and cyber attack investigation methodologies.
+- Ability to gather and interpret threat intelligence data to provide actionable insights.
+
+### Tools Used
+
+- MISP (Malware Information Sharing Platform) for conducting analysis and research.
+- Other relevant security tools and resources for supplementary investigation and validation.
+
+
+## Steps
