Update 5.Threat Intelligence Platform: MISP.md

--- a/5.Threat Intel.md
+++ b/5.Threat Intel.md
@@ -1,4 +1,4 @@
-# Incident Responder Lab - Threat Intel
+# Incident Responder Lab - Threat Intelligence Platform: MISP
 
 ## Objective
 
@@ -18,3 +18,15 @@ Utilize MISP, a Threat Intelligence Platform (TIP), to conduct analysis and rese
 
 
 ## Steps
+
+<img width="732" alt="83b72e06acdce9deaa8cb71cea712163e862335f368d106926b0205d4265313266aedd02f5a9696916f6ba05ff05" src="https://github.com/ayalasecurity/Detection-Lab/assets/157613993/1b4e7b43-7639-4a3b-aa67-196891ee46fd">
+
+
+
+<img width="732" alt="84e715e200c1614b014a07a2ed04432a5ccb72881e46ba5448329a1450d899c6567a1a40d939fd224340a10c85bd" src="https://github.com/ayalasecurity/Detection-Lab/assets/157613993/e0a693e0-9f5a-4983-9836-7bfa5aced2ad">
+
+
+
+- *Ref 1: Instructions and guidelines provided by the manager for the tasks.*
+- *Ref 2: Documentation and resources within the MISP platform.*
+- *Ref 3: External threat intelligence sources and research materials used during the analysis and investigation process.*
