--- a/5.Threat Intel.md
+++ b/5.Threat Intel.md
@@ -20,10 +20,114 @@ Utilize MISP, a Threat Intelligence Platform (TIP), to conduct analysis and rese
 ## Steps
 
 <img width="732" alt="83b72e06acdce9deaa8cb71cea712163e862335f368d106926b0205d4265313266aedd02f5a9696916f6ba05ff05" src="https://github.com/ayalasecurity/Detection-Lab/assets/157613993/1b4e7b43-7639-4a3b-aa67-196891ee46fd">
-
-
-
 <img width="732" alt="84e715e200c1614b014a07a2ed04432a5ccb72881e46ba5448329a1450d899c6567a1a40d939fd224340a10c85bd" src="https://github.com/ayalasecurity/Detection-Lab/assets/157613993/e0a693e0-9f5a-4983-9836-7bfa5aced2ad">
+
+- I needed to connect to MISP hosted on a separate system. I found the private IP address of the MISP server. When I connected to https://<privateIPhere>, I saw the below security warning because our MISP server was using a self-signed certificate for HTTPS. I clicked Advanced.
+- Next I clicked ‘Accept the Risk and Continue’, signing up into MISP.
+
+
+![d144c879ca9a21997b3989f4d7c27fdc4b9104d5e91c9790c80301dafdacba5751e81a62810c91f2a4422fd85751](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/13377225-d225-4338-abec-43ccc5676782)
+- By default, after logging in, I was taken to the Events page. Using the search bar on the right-hand side, I typed in ‘Ransomware’ and pressed the Enter key.
+
+
+![65d16eb6e91630d7e36c092e7a6add6905aeb2d0496bbb023c3f09f880edc27551c72bd509942ff436cd64e3f44c](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/e243df8c-8462-4179-a81b-95175cfedbb8)
+- At the bottom of this page I could see the total count of Events that match this search filter, giving me the answer to this question.
+
+
+![a7c15321a7957da417b01b2874575ec653ef8f378ce82314af8a295e5259fdaf3b85cf198eccdde483feed42c2aa](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/03d33848-730c-40a9-927b-0f5e14ea0be5)
+- Using the search box, I typed in ‘Lockbit’ and then clicked on the ‘Date’ heading to sort by most recent events first. To view this event, I could either click the ID value in the 3rd column or the eye icon in the final column.
+
+
+![010fa4e8632786cb9265ac9c2742e8d91373c602b77ea672250753019b25b6c8107fff2c4be47668cc3db4ec98ae](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/12738f57-aa13-48bd-a652-a455f003c6d9)
+- When inside the event, I scrolled down to find the Attributes section, which is used to hold indicators and other useful information.
+
+![3bb1de60e219ed24559d1d3d3e5924d17a8f0199f186000cb4c15410b7fe42728f6d7e162d736b9f88dcec27d16a](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/bfba0648-0c51-4656-9177-3f1cd34a9e83)
+- I could either use the search bar above the table or scroll down until I saw the domain property.
+
+
+![484ac13fe806cf31e4ea80ed731fddb470d8035a2b0f2a22fa0334bbcaa17a754761469a85193211a2695b61b41a](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/e2789a65-f74b-4dac-bedc-3d161026a9e9)
+- Going back to the Event List, I searched for ‘Babuk’ and found there was only one associated Event. Opening this up, I found a reference to YARA in the Attributes section. In the preview, I couldn't see anything referencing a ransom note, so I clicked on ‘Show all’.
+
+
+![484ac13fe806cf31e4ea80ed731fddb470d8035a2b0f2a22fa0334bbcaa17a754761469a85193211a2695b61b41a](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/9dd5b81e-64b9-4ce9-8740-d8c33e6efba3)
+<img width="631" alt="7a013affab7ad4dd347f0289551b78458a0f0cde080b8cf8442f72cf6026bd04f267b39265057228aefb120ad95f" src="https://github.com/ayalasecurity/Detection-Lab/assets/157613993/180bda0a-dab8-4cb9-aba3-5576afb98d13">
+- In that way, I could see the full YARA rule file, and see that it is looking for a string related to a created ransom note file.
+
+![4f93f3819bb59cac11d725f9e682609202a9d4f357d42a5ef46d307c5e26fc9811a84b02f3bcd23f13da951869f5](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/1140392e-1197-484e-b76e-537241bb1114)
+- Searching for 986 didn't show me the Event, because I would need to change our search type to ID
+ 
+<img width="742" alt="5d229fd698717fa79148efc07a4ad714059513ed3471352ee62a73bb8bfd84d60e6ae52c28d91d0d21ad88032f80" src="https://github.com/ayalasecurity/Detection-Lab/assets/157613993/eb862605-f3f2-4e07-aa6a-99c96ad6876a">
+- By default in MISP setup I was not showing the ATT&CK Matrix section, so I needed to click this button to show this table.
+
+<img width="742" alt="5d229fd698717fa79148efc07a4ad714059513ed3471352ee62a73bb8bfd84d60e6ae52c28d91d0d21ad88032f80" src="https://github.com/ayalasecurity/Detection-Lab/assets/157613993/5f32844c-b806-4fd2-951e-f65da609d682">
+- Now that I could see this table, I've just needed to scroll around and find which Tactic columns contain highlighted Techniques.
+
+
+![361cd390fb9901bb449677882aede758fe81553724034873ce7ad65e77decc1759d221ff07105e9a76d727f7d5a6](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/cef6e79a-cc91-4f09-b1b3-076d7dcd42c4)
+![4e0a29e042ae1d184bfbb13b43f88223803acf149e1e7bf48c983ebaee64eef77634b4a4de8b51c25d11b44b8424](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/7a140168-002a-41e7-96d6-bbe3a434bb25)
+- Alternatively, I could make things a lot easier for myself by toggling the ‘Show all’ filter in the top-right corner of the table, to hide any techniques that haven't been highlighted.
+
+
+![cd9c4c8d57d4d4f7544862dc921f24977fae588f6eb4f86f39e6201f3c06d560b1f85242a986f8396cfc4213bd08](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/29570f0b-2d68-49c2-9aec-f0216e03b128)
+- I found the Tags section at the top of the Event. The very first tag was threat-actor="Turla Group", so I clicked this to perform a search for this tag across all of our important intelligence Events.
+- Scrolling to the bottom of the Events List page, I could see there are 16 Events that have that specific tag applied.
+
+![508c91aaa92bdbae6d0bd21dfa4c56948d5f785ffafbf0a11b4ec0ff06ea8c4aeef00a46823a20096c51d6ab3d18](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/e77f676b-3ad2-48c7-85fe-979cf029c8df)
+- I still had the filter applied for threat-actor="Turla Group". Scrolling down the list of Events, I found some that had the tag mitre-intrusion-set=turla. I clicked on this tag to add it to my search filter. Now, I was left with two Events, so I opened the one with the older date.
+
+![bf68161a5a48e877755410334c0681dfc3010512fda55a3d747c466531d3429c117138671bfda8bddd0782a4adfe](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/e27e3c08-e2ae-42e8-92ee-d350048da5d5)
+- Scrolling down to the Attributes section, I needed to look at the Type and Comment columns (4 and 9) to search for the decoy document used for phishing their targets.
+
+![41126250e7099320a566b5ec6ce1b2c3ea6eb62260d06b3c77957fddda38de7fdeb4c2669cf5294dbbd5d8064214](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/5c367413-f6f6-410a-8f16-e485b437a444)
+- Searching for ‘DDoS Booter’ doesn't provide any results, so let's make my search simpler and go for ‘DDoS’. Looking through the Events found, I could find one that mentions Booters.
+
+<img width="541" alt="7ef511d3859667c5b2ea3b648f8749b81a63ad00215471c671e90072d54f5daab84349792c36278627e62c4b451b" src="https://github.com/ayalasecurity/Detection-Lab/assets/157613993/cda540f4-74b5-49ad-a077-0aac695c768b">
+- Looking at the Attributes table, I noticed that there were some IP addresses using the ip-dst Type value. So, I searched for ip-dst in the Attributes search box. Scrolling to the bottom, I could see the number of indicators that were IP addresses!
+
+
+<img width="743" alt="b2749864f1abd7a0162c800428a8d481e93e7cb3c5c41c8520ff254b7bf7844d15b4dc671598d25a11663b635090" src="https://github.com/ayalasecurity/Detection-Lab/assets/157613993/b6d6ac3f-8908-4160-ac82-1731b78bdbf0">
+- I searched for CoalaBot on the List Events page and opened the single event. Scrolling down, I found references to a malicious file and a link to a VirusTotal report page.
+
+![ce9f8aa4c3060fb91e74b0ea40936ba7db589a92c37bb9b71662f3f354c9e8abbe164d3e347f99236c5752a7315e](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/c52c85bd-ba8b-4804-a656-353beb472f24)
+- I needed to copy the hyperlink (right-click > copy) so that it appeared in the lab Clipboard. PLEASE NOTE due to the character limitation, I wouldn't copy the entire URL in one go, so VirusTotal would tell me the page can't be found. I had to copy the last bit of the URL from the lab again to ensure I had the full page (we're sorry - we'll try to get this limitation increased shortly).
+- I visited the VirusTotal page and went to the Details tab. Then, I scrolled down slightly to see the Signature Info section, which gave me the original filename of cla.exe. If the link was not working, I pasted the SHA256 into VirusTotal, and I got the same results: SHA256: fd07ad13dbf9da3f7841bc0dbfd303dc18153ad36259d9c6db127b49fa01d08f
+
+
+<img width="752" alt="89c4cec663516db60f833af9a90798ca6382b1e9c78716966e8f41e00dbfeaad646f9e161a416733feeebe416ea7" src="https://github.com/ayalasecurity/Detection-Lab/assets/157613993/6a4be745-ac6b-4b84-91c1-2d048d42d776">
+- I searched for ‘Rhombus’ on the List Events page and opened the Event. Scrolling down to the Attributes table, I found a link to the threat report posted on Reddit.
+
+
+![31bb829a0a562056211c3b3833335aca323f0e55845898f60e04dc5c735b934a40368258c04658c7d81f2eba0043](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/8e45b67a-6ecc-40d6-a8c9-3c1c7431f7dd)
+- I copied this link to the lab Clipboard in one go, then entered it into a browser on my host computer. This took me to a post in the subreddit ‘r/LinuxMalware’.
+
+
+<img width="644" alt="f13b56d4b76cc95abd56bb9c507742717fcfb1cfa99ec584b8223c469047fd75e2401429d84bdc342ae8709ba740" src="https://github.com/ayalasecurity/Detection-Lab/assets/157613993/104f45e6-3617-49e9-bd0f-5d6fe63cb3cd">
+- Now it was time to read the report to understand how this malware works. Eventually, I came to a section that mentioned the initial command-and-control callback to inform the attacker's server that a device had been infected and the malware had successfully run. This gave me the IP address and port (2020) that was used, allowing me to check our environment for logs where the destination IP was 209.126.69.167 and the destination port was 2020!
+
+
+<img width="695" alt="a37a3650d82cf99eebc1190bdbe949b095f6d84e39e4da7b867a6dfc17529b830a8ec6dfbe7b4a48591014a047ea" src="https://github.com/ayalasecurity/Detection-Lab/assets/157613993/49ac0a08-afad-4672-b123-7232a1321d8e">
+- First, I searched for ‘MiVoice’ on the List Events page and opened the associated Event. Taking some time to read the items in the Attributes table, I started to see multiple references to one CVE (Common Vulnerabilities and Exposures, an identification system for vulnerabilities) in multiple rows.
+
+![b2871bb898322e46678659d844e7a696a8e6f0ffdc272c7438c6dd80d5afb627e3c7a63589d68c7397cc72d4ea8b](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/f57e4a80-238f-477a-ab0c-f0a1d08907dd)
+- Now that I had the CVE,  I googled it to find the National Vulnerability Database page for it.
+
+
+![711237377507ad3f8c45dfd745556e3830ec9ae37125dd21a30a96b5d1b1c14f82b74f08bc9c0c505dcc21d97ecd](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/9280458c-a0dc-4e93-9585-c569c036a6e7)
+- On the NVD page, I found a section that included a link to the Vendor Advisory. This is a webpage posted by the company Mitel, which created MiVoice, so it contains the most accurate information about the vulnerability.
+
+
+![06c0ff0e3e3ccba6f472d0212b10975044ce3e98bdadb50d2062c4f3fea6d17cd3df515b9179ced8797289ef54f8](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/9dee1f86-3246-4242-a3e8-6a565e901a12)
+- Based on the answer format, I submitted ‘19.2 SP3 and earlier’.
+
+![6863f3ca2fc7dc270f1268a25db2963a310dcd4636131cd9cfcb5cf82ffe59e8fed4ed24fc3cc8c43fddafb76f55](https://github.com/ayalasecurity/Detection-Lab/assets/157613993/da42a506-11e2-4a4a-bb5b-6fd73726df78)
+- Using the search bar at the top of the Attributes table, I searched for ‘arctic’ to find any external analysis conducted by the company Arctic Wolf. I found multiple references to the same URL, https://arcticwolf.com/resources/blog/lorenz-ransomware-chiseling-in. I copied this link (right-click > copy) and copied it from the lab Clipboard to my host browser.Scrolling through the detailed report, I found a section on Persistence, and found the filename and hash values needed to answer this question.
+
+<img width="442" alt="f271a208430f78be06e19c30b92e36a42bf8dbcbd55346e83a48b8e764c13b6f9038436da7fd2a48a1d9795aa28d" src="https://github.com/ayalasecurity/Detection-Lab/assets/157613993/4b5daabc-67c7-4950-9033-50dc0a556a02">
+- I stayed in the same Event for this question, but I needed to move to the top of the page and find the ‘Galaxies’ section.
+
+<img width="794" alt="a9eae3b0f95326da0142d1167c44458165bcc25d3700c520e9b778c95d888da3161c014387e7b25d2be06747c061" src="https://github.com/ayalasecurity/Detection-Lab/assets/157613993/aed86fdc-5a86-4b9f-9562-5524927e9cc3">
+- Right at the bottom of this section, I saw the reference I was looking for, ‘Lorenz Ransomware’. I clicked the magnifying glass icon.
+
 
 
 
